[tool.poetry]
name = "roman-to-integer"
version = "0.1.0"
description = ""
authors = ["YatchenkoV <vitaliy.yathcenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
